:lipstick: Format Changes a bit
Make it render nice in MetaCPAN.

--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 {{$NEXT}}
 
-    Added call spread and put spread
+    - Added call spread and put spread
+
 1.23      2018-05-07 09:17:16+00:00 UTC
-     Switch to dzil
+
+    - Switch to dzil
+
 1.22
